--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   background-color: #fafafa;
+  overflow-x: hidden;
 }
 .container {
   max-width: 85%;
