--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -14,6 +14,8 @@
   height: 15rem;
   margin: 1rem;
   padding: 0.5rem;
+  transition: 0.3s ease;
+  box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.1);
 }
 .services .card img {
   padding-bottom: 1rem;
@@ -21,12 +23,9 @@
   margin: 0 auto;
 }
 
-.services .card:hover {
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
-  cursor: pointer;
-  transition: 0.3s all ease;
-  color: #fff;
-  border: none;
+.services .card:hover,
+.services .card:focus {
+  box-shadow: none;
 }
 
 @media (max-width: 350px) {
