--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -16,6 +16,7 @@
   padding: 0.5rem;
   transition: 0.3s ease;
   box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.1);
+  flex-wrap: wrap;
 }
 .services .card img {
   padding-bottom: 1rem;
