--- a/src/index.css
+++ b/src/index.css
@@ -227,3 +227,31 @@ button {
     z-index: 888;
   }
 }
+@media screen and (max-width: 350px) {
+  .hero h3 {
+    font-weight: 600;
+    letter-spacing: 2px;
+    font-size: 30px;
+  }
+  .hero h1 {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+
+  .hero h2 span {
+    color: #000;
+    font-size: 25px;
+  }
+  .hero p {
+    color: #878e99;
+    font-size: 16px;
+    line-height: 30px;
+  }
+  .hero .parah {
+    margin-top: 1.4rem;
+  }
+  .info-hero {
+    display: flex;
+    flex-direction: column;
+  }
+}
